--- a/modules/swagger-codegen/src/main/resources/php/api.mustache
+++ b/modules/swagger-codegen/src/main/resources/php/api.mustache
@@ -27,6 +27,7 @@ class {{classname}} {
 
   function __construct($apiClient) {
     $this->apiClient = $apiClient;
+    $this->apiClient->model_package = __NAMESPACE__;
   }
 
   {{#operation}}
