support for nested array

--- a/modules/swagger-codegen/src/main/resources/php/APIClient.mustache
+++ b/modules/swagger-codegen/src/main/resources/php/APIClient.mustache
@@ -383,6 +383,9 @@ class APIClient {
     } elseif (in_array($class, array('string', 'int', 'float', 'double', 'bool', 'object'))) {
       settype($data, $class);
       $deserialized = $data;
+    } elseif (gettype($data) == 'array') {      // Add support for nested arrays
+      settype($data, 'array');
+      $deserialized = $data;
     } elseif (isset($translateTypes[$class])) {
       settype($data, $translateTypes[$class]);
       $deserialized = $data;
