--- a/modules/swagger-codegen/src/main/resources/php/APIClient.mustache
+++ b/modules/swagger-codegen/src/main/resources/php/APIClient.mustache
@@ -268,7 +268,9 @@ class APIClient {
     } else if (is_object($data)) {
       $values = array();
       foreach (array_keys($data::$swaggerTypes) as $property) {
-        $values[$data::$attributeMap[$property]] = $this->sanitizeForSerialization($data->$property);
+        if ($data->hasValue[$property]) {
+          $values[$data::$attributeMap[$property]] = $this->sanitizeForSerialization($data->$property);
+        }
       }
       $sanitized = $values;
     } else {
