--- a/modules/swagger-codegen/src/main/resources/php/model.mustache
+++ b/modules/swagger-codegen/src/main/resources/php/model.mustache
@@ -39,6 +39,7 @@ class {{classname}} implements ArrayAccess {
       {{/hasMore}}{{/vars}}
   );
 
+  public $hasValue = array();
   {{#vars}}{{#description}}
   /**
   * {{{description}}}
@@ -46,8 +47,18 @@ class {{classname}} implements ArrayAccess {
   public ${{name}}; /* {{{datatype}}} */{{/vars}}
 
   public function __construct(array $data = null) {
-    {{#vars}}$this->{{name}} = $data["{{name}}"];{{#hasMore}}
-    {{/hasMore}}{{/vars}}
+    if (null === $data) {
+      return;
+    }
+{{#vars}}    $this->setIfExists("{{name}}", $data);
+{{/vars}}
+  }
+
+  private function setIfExists($name, $data) {
+    $this->hasValue[$name] = array_key_exists($name, $data);
+    if ($this->hasValue[$name]) {
+      $this->$name = $data[$name];
+    }
   }
 
   public function offsetExists($offset) {
