properly dereference the storage variable

--- a/modules/swagger-codegen/src/main/resources/php/model.mustache
+++ b/modules/swagger-codegen/src/main/resources/php/model.mustache
@@ -89,7 +89,7 @@ class {{classname}} implements ArrayAccess {
   public function __unset($name) {
     if ($this->hasValue[$name]) {
       $this->hasValue[$name] = false;
-      unset($storage[$name]);
+      unset($this->storage[$name]);
     }
   }
 
